# nkd_agents

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  fastapi_analysis_examples.py  fastapi_architecture_diagram.md  fastapi_performance_benchmark.py  pyproject.toml  research_report.md  simple_subagent_test.py  test_subagent.py
.github/workflows/: ci.yml  docker.yml  test-sandbox.yml
examples/: _utils.py  test_basic.py  test_cancellation.py  test_conversation_history.py  test_model_fallback.py  test_multi_tool.py  test_structured_output.py  test_tool_ctx.py  test_tool_ctx_mutation.py  utils.py
examples/anthropic/: config.py  model_settings.py  test_basic.py  test_cancellation.py  test_conversation_history.py  test_fallback.py  test_multi_tool.py  test_structured_output.py  test_tool_ctx.py  test_tool_ctx_mutation.py
examples/openai/: __init__.py  config.py  model_settings.py  test_basic.py  test_structured_output.py
nkd_agents/: __init__.py  __main__.py  _types.py  _utils.py  agents.py  anthropic.py  cli.py  cli_config.py  config.py  context.py  ctx.py  llm.py  llm.pyi  logging.py  loop.py  openai.py  system_prompt.py  tools.py  util.py  utils.py  web.py
nkd_agents/_providers/: __init__.py  anthropic.py  base.py  openai.py
nkd_agents/chat/: cli.py  config.py
nkd_agents/cli/: cli.py  completer.py  config.py  nkd_agent.py  sandbox.py
nkd_agents/cli/prompts/: subagent.j2
nkd_agents/prompts/: claude_research.j2  subagent.j2
nkd_agents/skills/: background-tasks.md
tests/: __init__.py  conftest.py  test_anthropic.py  test_cli.py  test_cli_config.py  test_extract_function_params.py  test_llm.py  test_logging.py  test_openai.py  test_sandbox.py  test_tools.py  test_utils.py  test_web.py
tests/nkd_agents/: test_llm.py
tests/nkd_agents/cli/: test_completer.py
