[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nkd_agents"
version = "0.0.1"
description = "nkd_agents is a package for building agents using only what you really need: an llm, a loop, and a few tools."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Amitej Mehta", email = "amitejmehta@berkeley.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.74.0,<=1.0.0",
    "openai>=2.11.0,<=3.0.0",
]

[project.scripts]
nkd_agents = "nkd_agents.cli:main"

[project.optional-dependencies]
cli = [
    "prompt-toolkit>=3.0.52,<4.0.0", # cli user input 
    "trafilatura>=2.0.0,<3.0.0", # for fetch_url
    "playwright>=1.40.0,<2.0.0", # for web_search
]
dev = [
    "freezegun==1.5.1",
    "pyright==1.1.408",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.14.13",
    "xenon==0.9.3",
]

# Explicitly specify the packages to include
[tool.setuptools]
packages = ["nkd_agents"]

# Default ruff configuration from: https://github.com/astral-sh/ruff?tab=readme-ov-file#configuration

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Changing the order of imports in our inits breaks the code. We can probably improve
# our project structure to avoid this in the future (no circular imports).
"__init__.py" = ["I"]
"__main__.py" = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "standard"
include = ["nkd_agents", "examples"]
exclude = ["**/__pycache__"]
pythonVersion = "3.12"